tests/ui/derives/derives-span-Ord-struct.stderr
error[E0369]: binary operation `<=>` cannot be applied to type `Error`
  --> $DIR/derives-span-Ord-struct.rs:8:5
   |
LL | #[derive(Ord,Eq,PartialOrd,PartialEq)]
   |          --- in this derive macro expansion
LL | struct Struct {
LL |     x: Error
   |     ^^^^^^^^
   |
note: an implementation of `Ord` might be missing for `Error`
  --> $DIR/derives-span-Ord-struct.rs:4:1
   |
LL | struct Error;
   | ^^^^^^^^^^^^ must implement `Ord`
   = note: this error originates in the derive macro `Ord` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Error` with `#[derive(Eq, Ord, PartialEq, PartialOrd)]`
   |
LL + #[derive(Eq, Ord, PartialEq, PartialOrd)]
LL | struct Error;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0369`.
